Moved cart component into Shop component. Passing state from operations between two components now in Shop. Changed responsiveness of navbar. Realigned various components due to stylesheet changes causing bugs. TODO: Add items into cart display in cart with quantity count. Add actual cart page for checkout and remove from cart operations Persisting states

--- a/src/components/shop-body/shop-body.css
+++ b/src/components/shop-body/shop-body.css
@@ -1,14 +1,8 @@
-.shop-body{
-margin-top:20px;
-}
-
-.shop-body div{
-    width:100%;
-}
 
 .cartValues{
     color:white;
     padding:20px;
     font-size: larger;
     font-weight:bolder;
+
 }
